--- a/mass in special relativity.ipynb
+++ b/mass in special relativity.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,23 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle m[kg]$"
-      ],
-      "text/plain": [
-       "m[kg]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m\n",
     "\n"
@@ -81,23 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle c[m/s]$"
-      ],
-      "text/plain": [
-       "c[m/s]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c\n",
     "\n"
@@ -105,25 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle v[m/s]$"
-      ],
-      "text/plain": [
-       "v[m/s]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v\n",
     "\n"
@@ -139,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,23 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle c[m/s]^{2} m[kg]$"
-      ],
-      "text/plain": [
-       "c[m/s]**2*m[kg]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "E_0\n",
     "\n"
@@ -189,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,25 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{1}{\\sqrt{1 - \\frac{v[m/s]^{2}}{c[m/s]^{2}}}}$"
-      ],
-      "text/plain": [
-       "1/sqrt(1 - v[m/s]**2/c[m/s]**2)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gamma\n",
     "\n"
@@ -232,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,23 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{c[m/s]^{2} m[kg]}{\\sqrt{1 - \\frac{v[m/s]^{2}}{c[m/s]^{2}}}}$"
-      ],
-      "text/plain": [
-       "c[m/s]**2*m[kg]/sqrt(1 - v[m/s]**2/c[m/s]**2)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "E\n",
     "\n"
@@ -274,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,23 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{m[kg] v[m/s]}{\\sqrt{1 - \\frac{v[m/s]^{2}}{c[m/s]^{2}}}}$"
-      ],
-      "text/plain": [
-       "m[kg]*v[m/s]/sqrt(1 - v[m/s]**2/c[m/s]**2)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p\n",
     "\n"
@@ -310,65 +212,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 질량\n",
+    "### 질량\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = sy.sqrt(E * E - p * p)\n",
+    "m_rel = gamma * m\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\sqrt{\\frac{c[m/s]^{4} m[kg]^{2}}{1 - \\frac{v[m/s]^{2}}{c[m/s]^{2}}} - \\frac{m[kg]^{2} v[m/s]^{2}}{1 - \\frac{v[m/s]^{2}}{c[m/s]^{2}}}}$"
-      ],
-      "text/plain": [
-       "sqrt(c[m/s]**4*m[kg]**2/(1 - v[m/s]**2/c[m/s]**2) - m[kg]**2*v[m/s]**2/(1 - v[m/s]**2/c[m/s]**2))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m\n",
+    "m_rel\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\sqrt{\\frac{c[m/s]^{2} m[kg]^{2} \\left(c[m/s]^{4} - v[m/s]^{2}\\right)}{c[m/s]^{2} - v[m/s]^{2}}}$"
-      ],
-      "text/plain": [
-       "sqrt(c[m/s]**2*m[kg]**2*(c[m/s]**4 - v[m/s]**2)/(c[m/s]**2 - v[m/s]**2))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sy.simplify(m)\n",
+    "sy.simplify(m_rel)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 주어진 값\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "정지상태인 경우\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "substitution_dictionary_stationary = {\n",
+    "    c: 300000 * 1e3,\n",
+    "    v: 0,\n",
+    "    m: 10,\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_rel.subs(substitution_dictionary_stationary)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "v = 10 km/hr 인 경우\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "substitution_dictionary_10_kph = {\n",
+    "    c: 300000 * 1e3,\n",
+    "    v: 10 * 3.6,\n",
+    "    m: 10,\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_rel.subs(substitution_dictionary_10_kph)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "v = 10 km/sec 인 경우\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "substitution_dictionary_10_kps = {\n",
+    "    c: 300000 * 1e3,\n",
+    "    v: 10 * 1e3,\n",
+    "    m: 10,\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_rel.subs(substitution_dictionary_10_kps)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "v = 0.1 c 인 경우\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "substitution_dictionary_0_1_c = {\n",
+    "    c: 300000 * 1e3,\n",
+    "    v: substitution_dictionary_stationary[c] * 0.1,\n",
+    "    m: 10,\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_rel.subs(substitution_dictionary_0_1_c)\n",
     "\n"
    ]
   },
