--- a/mass in special relativity.ipynb
+++ b/mass in special relativity.ipynb
@@ -442,7 +442,7 @@
    "source": [
     "substitution_dictionary_10_kph = {\n",
     "    c: 300000 * 1e3,\n",
-    "    v: 10 * 3.6,\n",
+    "    v: 10 * 1e3 / 3600,\n",
     "    m: 10,\n",
     "}\n",
     "\n"
@@ -456,10 +456,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 10.0000000000001$"
+       "$\\displaystyle 10.0$"
       ],
       "text/plain": [
-       "10.0000000000001"
+       "10.0000000000000"
       ]
      },
      "execution_count": 20,
