added <br>s to references

--- a/mass in special relativity.ipynb
+++ b/mass in special relativity.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "source": [
     "## 특수 상대성 이론\n",
-    "ref : \n",
-    "https://en.wikipedia.org/wiki/Mass_in_special_relativity\n",
+    "ref :<br>\n",
+    "https://en.wikipedia.org/wiki/Mass_in_special_relativity<br>\n",
     "https://www.britannica.com/science/relativistic-mass\n",
     "\n"
    ]
